php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49132 posix_times returns false without error
Submitted: 2009-08-01 17:42 UTC Modified: 2009-08-01 18:22 UTC
From: phpbugs at gunnu dot us Assigned:
Status: Closed Package: POSIX related
PHP Version: 6SVN-2009-08-01 (SVN) OS: Linux 2.6
Private report: No CVE-ID: None
 [2009-08-01 17:42 UTC] phpbugs at gunnu dot us
Description:
------------
/[cvs]/php-src/ext/posix/posix.c rev 1.110 line 687 detects error if 'ticks' is a negative value. POSIX.1 states -1 is an error condition, but other negative values are acceptable overflow, which can be caused by a long uptime.
posix_times() returns false under these conditions when there is no error except a long uptime.

Reproduce code:
---------------
<?php
var_dump( posix_times() ); //returns false if uptime is high enough without setting error
?>

Expected result:
----------------
A populated array

Actual result:
--------------
bool(FALSE)

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-08-01 17:57 UTC] phpbugs at gunnu dot us
--- posix.c     2009-08-01 13:55:30.000000000 -0400
+++ posix.c.fix 2009-08-01 13:56:14.000000000 -0400
@@ -684,7 +684,7 @@

        PHP_POSIX_NO_ARGS;

-       if((ticks = times(&t)) < 0) {
+       if((ticks = times(&t)) == -1) {
                POSIX_G(last_error) = errno;
                RETURN_FALSE;
        })
 [2009-08-01 18:22 UTC] svn@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&revision=286629
Log: - Fixed bug #49132 (posix_times returns false without error)
  patch by: phpbugs at gunnu dot us
 [2009-08-01 18:22 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Thanks for the patch. ;-)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC