- Fixed bug #49132 (posix_times returns false without error)   patch by: phpbugs at gunnu dot us

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@286629 c90b9560-bf6c-de11-be94-00142212c4b1